- 정지영 라디오 입점 배너 - 이벤트배너 수정

--- a/sde_design/skin6/_sp/apps/layout/index/index-1/index.css
+++ b/sde_design/skin6/_sp/apps/layout/index/index-1/index.css
@@ -179,6 +179,9 @@ div[layout="sp-layout-fixed"] {width:1200px;}
 .main_event .eventclip li a {
 	display: block;
 }
+.main_event .eventclip li a.readynow {
+	cursor: default;
+}
 .main_event .eventclip li a img {
 	width: 100%;
 }
