--- a/sde_design/mobile1/_wg/css/layout.css
+++ b/sde_design/mobile1/_wg/css/layout.css
@@ -2,6 +2,7 @@
 
 body { height:100%; }
 #wrap { overflow:hidden; position:relative; min-height:100%; width:100%; }
+figure { margin: 0; }
 #container { position:relative; }
 #contents { }
 
