--- a/sde_design/skin6/css/module/product/3245/listmain_1.css
+++ b/sde_design/skin6/css/module/product/3245/listmain_1.css
@@ -2,8 +2,8 @@
 .xans-product-1 { }
 .xans-product-1 h2 { margin:0 0 16px; font-weight:normal; font-size:20px; font-family:Arial, "돋움", Dotum, sans-serif; color:#2e2e2e; text-align:center; }
 .xans-product-1 img { vertical-align:middle; }
-.xans-product-1 ul.prdList { display:table; width:100%; min-width:756px; margin:-20px 0 0; font-size:0; line-height:0; }
-.xans-product-1 ul.prdList li.item { display:inline-block; width: 32%; margin: 0 2% 20px 0; color:#757575; vertical-align:top; *display:inline; *zoom:1; }
+.xans-product-1 ul.prdList { display:table; width:100%; min-width:756px; font-size:0; line-height:0; }
+.xans-product-1 ul.prdList li.item { display:inline-block; width: 380px; margin: 0 30px 20px 0; color:#757575; vertical-align:top; *display:inline; *zoom:1; }
 .xans-product-1 ul.prdList li.item:nth-child(3n) {margin-right: 0;}
 .xans-product-1 ul.prdList li.item .box { margin:0 auto; font-size:12px; text-align:center; }
 .xans-product-1 ul.prdList li .color { overflow:hidden; display:inline-block; margin:3px 0 0 0; }
@@ -11,63 +11,6 @@
 .xans-product-1 ul.prdList.column4 li .color { width:116px; }
 .xans-product-1 ul.prdList.column5 li .color { width:76px; }
 .xans-product-1 ul.prdList li .chips { float:left; width:10px; height:10px; margin:0 2px 2px 0; border:1px solid #e3e3e3; font-size:0; line-height:0; }
-
-/* 메인쇼핑하기 커스텀 */
-.mh_main_product {width:1200px; margin:0 auto;}
-.mh_main_product_header {padding:150px 0 100px; text-align:center;}
-.mh_main_product_header .title {display:block; color:#000000; font-size:30px; font-weight:600; letter-spacing:-1px; }
-.mh_main_product_header .desc { display:block; padding-top:16px; color:#9c9c9c; font-size:20px; font-weight:300; letter-spacing:-2px;}
-/*.mh_main_product .prdList li.item .box { background: #f5f5f5; }*/
-.mh_main_product .prdList li.item .prdImg > a {
-    width: 100%;
-    height: 100%;
-    display: block;
-}
-.mh_main_product .prdList li.item p {
-    overflow: hidden;
-}
-.mh_main_product .prdList li.item a img {
-    margin: 0;
-    transform: scale(1);
-    transition: 0.2s all ease-in-out;
-}
-.mh_main_product .prdList li.item:hover a img {
-    transform: scale(1.05);
-}
-.mh_main_product .prdList li.item a img {
-    width: 100%;
-}
-.mh_main_product .prdList li.item p.name {
-    text-align: center;
-}
-.mh_main_product .prdList li.item p.name span {
-    display: block;
-    line-height: 30px;
-    padding: 15px 0 0;
-}
-.mh_main_product .prdList li.item .xans-product-listitem {
-    height: 110px;
-}
-.mh_main_product .prdList li.item .xans-product-listitem li {
-    text-align: center;
-}
-.mh_main_product .prdList li.item .xans-product-listitem li:first-child span {
-    line-height: 20px;
-    padding: 0 0 10px;
-}
-.mh_main_product .prdList li.item .xans-product-listitem li span {
-    display: block;
-    line-height: 1.3;
-}
-.mh_main_product .prdList li.item .xans-product-listitem li #span_product_tax_type_text {
-    line-height: 20px;
-    font-size: 12px !important;
-    margin-top: 5px;
-}
-
-
-
-
 
 .xans-product-1 ul.prdList .thumb { margin:0 0 10px;}
 .xans-product-1 ul.prdList .wish { position:absolute; right:3px; top:5px; z-index:1; cursor:pointer; }
@@ -122,3 +65,125 @@
 .xans-product-1 .layerDiscountPeriod .content p strong span { font-size:11px; }
 .xans-product-1 .layerDiscountPeriod .close { position:absolute; right:14px; top:14px; }
 .xans-product-1 .layerDiscountPeriod .close img { cursor:pointer; }
+
+/* 메인쇼핑하기 커스텀 */
+.mh_main_product {width:1200px; margin:0 auto;}
+.mh_main_product_header {padding:150px 0 100px; text-align:center;}
+.mh_main_product_header .title {display:block; color:#000000; font-size:30px; font-weight:600; letter-spacing:-1px; }
+.mh_main_product_header .desc { display:block; padding-top:16px; color:#9c9c9c; font-size:20px; font-weight:300; letter-spacing:-2px;}
+/*.mh_main_product .prdList li.item .box { background: #f5f5f5; }*/
+.mh_main_product .prdList li.item .prdImg > a {
+    width: 100%;
+    height: 100%;
+    display: block;
+}
+.mh_main_product .prdList li.item p {
+    overflow: hidden;
+}
+.mh_main_product .prdList li.item a img {
+    margin: 0;
+    transform: scale(1);
+    transition: 0.2s all ease-in-out;
+}
+.mh_main_product .prdList li.item a img {
+    width: 100%;
+}
+.mh_main_product .prdList li.item p.name {
+    text-align: center;
+}
+.mh_main_product .prdList li.item p.name span {
+    display: block;
+    line-height: 30px;
+    padding: 15px 0 0;
+}
+.mh_main_product .prdList li.item .xans-product-listitem {
+    height: 110px;
+}
+.mh_main_product .prdList li.item .xans-product-listitem li {
+    text-align: center;
+}
+.mh_main_product .prdList li.item .xans-product-listitem li:first-child span {
+    line-height: 20px;
+    padding: 0 0 10px;
+}
+.mh_main_product .prdList li.item .xans-product-listitem li span {
+    display: block;
+    line-height: 1.3;
+}
+.mh_main_product .prdList li.item .xans-product-listitem li #span_product_tax_type_text {
+    line-height: 20px;
+    font-size: 12px !important;
+    margin-top: 5px;
+}
+
+
+
+
+/* MD 추천 상품 */
+
+.xans-product-2 {  }
+.xans-product-2 h2 { margin:0 0 16px; font-weight:normal; font-size:20px; font-family:Arial, "돋움", Dotum, sans-serif; color:#2e2e2e; text-align:center; }
+.xans-product-2 img { vertical-align:middle; }
+.xans-product-2 ul.prdList { display:table; width:100%; min-width:756px; margin:-20px 0 0; font-size:0; line-height:0; }
+.xans-product-2 ul.prdList li.item { display:inline-block; width: 32%; margin: 0 2% 20px 0; color:#757575; vertical-align:top; *display:inline; *zoom:1; }
+.xans-product-2 ul.prdList li.item:nth-child(3n) {margin-right: 0;}
+.xans-product-2 ul.prdList li.item .box { margin:0 auto; font-size:12px; text-align:center; }
+.xans-product-2 ul.prdList li .color { overflow:hidden; display:inline-block; margin:3px 0 0 0; }
+.xans-product-2 ul.prdList.column3 li .color { width:176px; }
+.xans-product-2 ul.prdList.column4 li .color { width:116px; }
+.xans-product-2 ul.prdList.column5 li .color { width:76px; }
+.xans-product-2 ul.prdList li .chips { float:left; width:10px; height:10px; margin:0 2px 2px 0; border:1px solid #e3e3e3; font-size:0; line-height:0; }
+
+.xans-product-2 ul.prdList .thumb { margin:0 0 10px;}
+.xans-product-2 ul.prdList .wish { position:absolute; right:3px; top:5px; z-index:1; cursor:pointer; }
+.xans-product-2 ul.prdList .name { text-align:left; }
+.xans-product-2 ul.prdList .name a { color:#2e2e2e; }
+.xans-product-2 ul.prdList .name .title { font-weight:normal; }
+.xans-product-2 ul.prdList .status { margin:0 0 16px; padding:0 80px 4px 0; border-bottom:1px solid #e8e8e8; text-align:right; line-height:0; *zoom:1; }
+.xans-product-2 ul.prdList .status:after { content:""; display:block; clear:both; }
+.xans-product-2 ul.prdList .icon { float:left; text-align:left; }
+.xans-product-2 ul.prdList .icon img { margin:0 -3px 6px 0; }
+.xans-product-2 ul.prdList .button { margin:0 -80px 0 0; *zoom:1; }
+.xans-product-2 ul.prdList .button img { cursor:pointer; }
+.xans-product-2 ul.prdList .button .option { display:inline; position:relative; *zoom:1; }
+.xans-product-2 ul.prdList .button .likeButton { display:inline-block; margin:0 5px; }
+.xans-product-2 ul.prdList .button .likeButton button { font-family:verdana; color:#9a9a9a; letter-spacing:-1px; background:none; }
+.xans-product-2 ul.prdList .button .likeButton button img { vertical-align:middle; }
+.xans-product-2 ul.prdList .button .likeButton button strong { height:16px; vertical-align:middle; }
+.xans-product-2 ul.prdList .button .likeButton.selected button { color:#353535; }
+.xans-product-2 ul.prdList .mileage { display:block; }
+.xans-product-2 ul.prdList span.grid { display:block; }
+
+.xans-product-listitem li { text-align:left; }
+
+/* 퀵뷰 */
+.xans-product-2 .prdImg { position:relative; }
+.xans-product-2 .prdImg:hover .quickView { display:block; }
+.xans-product-2 .quickView { display:none; position:absolute; left:0; bottom:10px; z-index:1; width:100%; height:42px; background:#000; opacity:0.5; filter:alpha(opacity=50); zoom:1; }
+.xans-product-2 .quickView a { display:block; width:100%; height:42px; line-height:42px; padding:0 0 0 35px; box-sizing:border-box; color:#fff; background:url("//img.echosting.cafe24.com/design/module/product/listmain/3245/ico_quick_view.png") no-repeat 76px center; }
+.xans-product-2 .quickView a:hover { text-decoration:none; }
+
+/* 진열방식 */
+.xans-product-2 ul.column4 li.item { width:25%; }
+.xans-product-2 ul.column4 li.item .box { width:240px; }
+.xans-product-2 ul.column4 li.item .thumb { max-width:238px; }
+.xans-product-2 ul.column5 li.item { width:20%; }
+.xans-product-2 ul.column5 li.item .box { width:189px; }
+.xans-product-2 ul.column5 li.item .thumb { max-width:187px; }
+
+/* module="product_ListItem" */
+.xans-product-2 .xans-product-listitem { margin:0; }
+.xans-product-2 .xans-product-listitem li .title { font-weight:normal; vertical-align:top; }
+.xans-product-2 .xans-product-listitem li .title span { vertical-align:top; }
+
+/* 할인기간 레이어 */
+.xans-product-2 .discountPeriod { display:inline-block; z-index:10; position:relative; width:55px; height:19px; vertical-align:middle; *zoom:1; *display:inline; }
+.xans-product-2 .discountPeriod .edge { position:absolute; left:50%; top:-6px; width:10px; height:6px; margin:0 0 0 -5px; font-size:0; line-height:0; background:url("http://img.echosting.cafe24.com/skin/base_ko_KR/common/ico_tip_edge.gif") no-repeat 0 0; }
+.xans-product-2 .layerDiscountPeriod { display:none; position:absolute; left:50%; top:26px; width:247px; margin:0 0 0 -124px; border:1px solid #565960; font-size:12px; background-color:#fff; }
+.xans-product-2 .layerDiscountPeriod strong.title { display:block; margin:0 0 12px; padding:0 35px 0 0; font-weight:bold; color:#2e2e2e; }
+.xans-product-2 .layerDiscountPeriod .content { padding:9px 10px 12px 14px; font-family:Verdana, "돋움", Dotum, sans-serif; }
+.xans-product-2 .layerDiscountPeriod .content p { margin:2px 0 0; font-size:11px; color:#000; line-height:16px; color:#757575; letter-spacing:-1px; }
+.xans-product-2 .layerDiscountPeriod .content p strong { font-weight:normal; font-size:12px; color:#2e2e2e; }
+.xans-product-2 .layerDiscountPeriod .content p strong span { font-size:11px; }
+.xans-product-2 .layerDiscountPeriod .close { position:absolute; right:14px; top:14px; }
+.xans-product-2 .layerDiscountPeriod .close img { cursor:pointer; }
