--- a/sde_design/skin6/_sp/apps/layout/header/mh_header/header.html
+++ b/sde_design/skin6/_sp/apps/layout/header/mh_header/header.html
@@ -21,7 +21,7 @@
 		<ul id="JS_topMenu" class="right">
 			<!-- 로그인전 -->
 			<li module="Layout_statelogoff"><a href="/member/login.html" class="log"><strong>로그인</strong></a></li>
-			<li module="Layout_statelogoff" class="mh_header_join_count"><a href="/member/join.html">회원가입<span class="join_count">쿠폰 3,000원</span></a>
+			<li module="Layout_statelogoff" class="mh_header_join_count"><a href="/member/join.html">회원가입<!--<span class="join_count">쿠폰 3,000원</span>--></a>
 			</li>
 			<!-- //로그인전 -->
 
@@ -40,6 +40,10 @@
 				<a href="/order/basket.html">장바구니 <span class="count" count="{$basket_count}">( {$basket_count} )</span></a>
 			</li>
 		</ul>
+	</div>
+
+	<div class="join_coupon">
+		<a href="https://moonhillfood.com/article/event/8/1431/page/2/"><img src="/image/main/join_coupon.png" alt="join_coupon" /></a>
 	</div>
 
 	<h1 class="logo">
