--- a/sde_design/skin6/_sp/apps/layout/panel/panel-1/panel.html
+++ b/sde_design/skin6/_sp/apps/layout/panel/panel-1/panel.html
@@ -115,7 +115,7 @@
 					<!--<div accordion-loop>
 						<a accordion-button>고객지원센터</a>
 						<div accordion-inside>
-							<a href="/board/index.html">고객센터</a>
+							<a href="/board/index_20200831.html">고객센터</a>
 							<p module="myshop_main"><a help href="/board/consult/list.html" class="{$consult_display|display}">1:1 상담하기</a></p>
 							<p module="Layout_sosBanner"><a help href="/board/urgency/urgency.html">긴급 문의하기</a></span>
 							<a href="/shopinfo/company.html">about us</a>
