--- a/sde_design/mobile1/_wg/css/header.css
+++ b/sde_design/mobile1/_wg/css/header.css
@@ -41,6 +41,19 @@
 
 .header_02 { position:relative; display:block; margin:60px 0 20px; }
 .header_02.mh_header_logo #logo > a { display: block; }
+.header_02  .join_coupon {
+	position: absolute;
+	top: -10px;
+	left: 0;
+	padding: 0 10px;
+}
+.header_02  .join_coupon a {
+	display: block;
+	height: 20px;
+}
+.header_02  .join_coupon a > img {
+	height: 100%;
+}
 
 /* 로고 */
 .header_02 #logo { text-align:center; }
@@ -54,10 +67,7 @@
 .header_02 .search { display:none; position:absolute; top:50%; right:10px; margin-top:-20px; width:40px; height:40px; }
 .header_02 .search button { width:40px; height:40px; border:0; background:none; font-family:'FontAwesome'; font-size:23px; }
 
-
-
-
 /** header_03 **/
 
-.header_03 { position:relative; z-index:1; display:block; padding:10px 0; border-top:1px solid #eee; border-bottom:1px solid #eee; background:#fff; }
+.header_03 { position:relative; z-index:1; display:none; padding:10px 0; border-top:1px solid #eee; border-bottom:1px solid #eee; background:#fff; }
 .header_03:after { content:""; display:block; clear:both; *zoom:1; }
