모바일 스타일 수정 작업

--- a/sde_design/mobile1/_wg/css/fix_cafe.css
+++ b/sde_design/mobile1/_wg/css/fix_cafe.css
@@ -13,6 +13,7 @@
     /* 타이틀 */
     #titleArea {
         position: relative;
+        border-top: 1px solid rgba(0,0,0,0.09) !important;
         border-bottom: 1px solid rgba(0,0,0,0.09) !important;
         background-color: #fff !important;
     }
@@ -21,7 +22,7 @@
         line-height: 50px !important;
         font-size: 18px !important;
         color: #000 !important;
-        font-weight: 200 !important;
+        font-weight: 700 !important;
         letter-spacing: 0.03em !important;
         text-align: center !important;
         border:0 !important;
