--- a/sde_design/mobile1/css/module/board/readPackage.css
+++ b/sde_design/mobile1/css/module/board/readPackage.css
@@ -1,4 +1,5 @@
 .xans-board-readpackage { background:#fff; }
+.xans-board-readpackage > form .content { padding: 10px; }
 .xans-board-readpackage img { vertical-align:middle; }
 
 .xans-board-read .label { font-weight:normal; }
@@ -21,7 +22,7 @@
 .xans-board-read .content { word-wrap:break-word; }
 .xans-board-read .content p,
 .xans-board-read .content div{ text-align:left; }
-.xans-board-read .content img { margin:0; max-width:100%; height: auto !important; }
+.xans-board-read .content img { margin: 10px 0; max-width:100%; height: auto !important; }
 .xans-board-read .content ul li { list-style:disc; }
 .xans-board-read .attach { oveflow:hidden; padding:14px 10px 14px; border-bottom:1px solid #d5d5d5; color:#757575; }
 .xans-board-read .attach:after { content:""; display:block; clear:both; }
@@ -44,11 +45,14 @@
 
 /* read - 상품 */
 .xans-board-product { overflow:hidden; margin:0 0 10px; padding:10px; border-bottom:1px solid #ececec; background:#f1f1f1; }
-.xans-board-product .prdThumb { float:left; width:73px; }
-.xans-board-product .prdThumb img { width:73px; border:1px solid #dedede; }
-.xans-board-product .prdInfo { padding:0 0 0 87px; }
+.xans-board-product .prdThumb { float:left; width: 115px; border:1px solid #dedede; }
+.xans-board-product .prdThumb a { display: block; }
+.xans-board-product .prdThumb img { width: 100%; }
+.xans-board-product .prdInfo { padding:0 0 0 130px; }
 .xans-board-product .prdInfo h3 { font-size:13px; color:#1b1b1b; }
+.xans-board-product .prdInfo h3 a { display: block; line-height: 20px; }
 .xans-board-product .prdInfo h3 img { vertical-align:middle; }
-.xans-board-product .prdInfo p { margin:14px 0 0; }
-.xans-board-product .prdInfo p.price { font-size:12px; color:#508bed; font-weight:bold; }
-.xans-board-product .prdInfo p.button a { margin-bottom:2px; }
+.xans-board-product .prdInfo p { margin: 10px 0 0; }
+.xans-board-product .prdInfo p.price { line-height: 19px; font-size:14px; color:#508bed; font-weight:bold; }
+.xans-board-product .prdInfo p.button a { height: 24px; line-height: 22px; font-size: 11px;}
+
