--- a/sde_design/skin6/_sp/apps/layout/header/mh_header/header.html
+++ b/sde_design/skin6/_sp/apps/layout/header/mh_header/header.html
@@ -52,15 +52,14 @@
 
 	<ul class="menu">
 		<li>
-			<a><span>브랜드</span></a>
+			<a href="/about/life.html"><span>브랜드</span></a>
 			<ul>
-<!--			<li><a href="/about/main.html">제나스토리</a></li>-->
 				<li><a href="/about/life.html">제나라이프</a></li>
 				<li><a href="/about/info.html">원료이야기</a></li>
 			</ul>
 		</li>
 		<li>
-			<a><span>쇼핑하기</span></a>
+			<a href="/product/list.html?cate_no=49"><span>쇼핑하기</span></a>
 			<ul>
 				<li><a href="/product/list.html?cate_no=49">제품구매</a></li>
 				<li><a href="/product/list.html?cate_no=60">타임세일</a></li>
@@ -72,7 +71,7 @@
 			<a href="/board/product/list.html?board_no=4"><span>구매후기</span></a>
 		</li>
 		<li>
-			<a><span>커뮤니티</span></a>
+			<a href="/board/index.html"><span>커뮤니티</span></a>
 			<ul>
 				<li><a href="/board/index.html">고객센터</a></li>
 				<li><a href="/board/free/list.html?board_no=3">자주묻는 질문</a></li>
@@ -81,7 +80,7 @@
 			</ul>
 		</li>
 		<li>
-			<a><span>소식</span></a>
+			<a href="/board/free/list.html?board_no=1"><span>소식</span></a>
 			<ul>
 				<li><a href="/board/free/list.html?board_no=1">공지사항</a></li>
 				<li><a href="/board/free/list.html?board_no=3001">제나소식</a></li>
