--- a/sde_design/skin6/_sp/apps/layout/footer/footer-3/footer.html
+++ b/sde_design/skin6/_sp/apps/layout/footer/footer-3/footer.html
@@ -175,7 +175,7 @@
 							<span>이메일 <em></em> <a href="mailto:{$email}">{$email}</a></span>
 
 						</p>
-						<p style="color:#000">
+						<p style="color:#e6e6e6">
 							<span>마케팅/제휴/입점 문의 <em></em> 070-4652-3191</span>
 						</p>
 					</li>
